--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
       <h3 class="STARDUST3">L O V E <strong>❤</strong> Y O U</h3>
       <img class="img" src="EDIT_ME.png" alt="JUNO_OKYO" />
       <canvas id="pinkboard"></canvas>
+      <div class="buttons">
+  <button id="yesButton">Đồng ý</button>
+  <button id="noButton">Không đồng ý</button>
+</div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
