--- a/index.html
+++ b/index.html
@@ -38,4 +38,22 @@
     <script src="js/particle.js"></script>
     <script src="js/universe.js"></script>
   </body>
+  <script>
+  window.addEventListener('DOMContentLoaded', () => {
+    const noButton = document.getElementById('noButton');
+    const container = document.querySelector('.buttons');
+
+    noButton.addEventListener('mouseenter', () => {
+      const maxX = container.clientWidth - noButton.offsetWidth;
+      const maxY = container.clientHeight - noButton.offsetHeight;
+
+      const randomX = Math.floor(Math.random() * maxX);
+      const randomY = Math.floor(Math.random() * maxY);
+
+      noButton.style.left = `${randomX}px`;
+      noButton.style.top = `${randomY}px`;
+    });
+  });
+</script>
+
 </html>
