--- a/index.html
+++ b/index.html
@@ -54,6 +54,70 @@
       });
     });
   </script>
+  <script>
+  window.addEventListener('DOMContentLoaded', () => {
+    const noButton = document.getElementById('noButton');
+    const yesButton = document.getElementById('yesButton');
+    const container = document.querySelector('.buttons');
+
+    noButton.addEventListener('mouseenter', () => {
+      const maxX = container.clientWidth - noButton.offsetWidth;
+      const maxY = container.clientHeight - noButton.offsetHeight;
+
+      const randomX = Math.floor(Math.random() * maxX);
+      const randomY = Math.floor(Math.random() * maxY);
+
+      noButton.style.left = `${randomX}px`;
+      noButton.style.top = `${randomY}px`;
+    });
+
+    // Hiệu ứng khi bấm "Đồng ý"
+    yesButton.addEventListener('click', () => {
+      showLovePopup();
+      createHeartRain();
+    });
+
+    function showLovePopup() {
+      const popup = document.createElement('div');
+      popup.innerHTML = `
+        <div style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);
+                    background: rgba(255,255,255,0.95); padding: 30px 40px; border-radius: 20px;
+                    box-shadow: 0 0 20px rgba(0,0,0,0.2); font-size: 20px; text-align: center;
+                    z-index: 9999; font-family: 'Montserrat', sans-serif;">
+          💖 Anh biết em sẽ đồng ý mà! <br><br>
+          Cảm ơn em vì đã bước vào cuộc đời anh! 🌸<br><br>
+          <strong>Yêu em nhiều lắm!</strong>
+        </div>
+      `;
+      document.body.appendChild(popup);
+    }
+
+    function createHeartRain() {
+      for (let i = 0; i < 30; i++) {
+        const heart = document.createElement('div');
+        heart.innerHTML = '❤️';
+        heart.style.position = 'fixed';
+        heart.style.left = Math.random() * window.innerWidth + 'px';
+        heart.style.top = '-50px';
+        heart.style.fontSize = Math.random() * 24 + 24 + 'px';
+        heart.style.opacity = Math.random();
+        heart.style.animation = `fall ${3 + Math.random() * 2}s linear infinite`;
+        document.body.appendChild(heart);
+      }
+    }
+  });
+
+  // CSS Animation
+  const style = document.createElement('style');
+  style.innerHTML = `
+    @keyframes fall {
+      0% { transform: translateY(0); }
+      100% { transform: translateY(110vh); }
+    }
+  `;
+  document.head.appendChild(style);
+</script>
+
   </body>
   
 </html>
